New metric added

--- a/config/pipelines/nhsx-au-analytics/config_national_digital_channels_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_national_digital_channels_dbrks.json
@@ -220,6 +220,11 @@
 						"id": "M269",
 						"full_name": "Covid Pass Transactions",
 						"short_name": "ndc_transactions_nhsapp_covid_pass_transactions_month_count"
+					},
+					{
+						"id": "M270",
+						"full_name": "Research",
+						"short_name": "ndc_transactions_nhsapp_research_count"
 					}
 				]
 			}
@@ -528,6 +533,12 @@
 					"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/ndc_transactions_nhsapp_covid_pass_transactions_month_count/",
 					"sink_file": "ndc_transactions_nhsapp_covid_pass_transactions_month_count.csv",
 					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_national_digital_channels/dbrks_ndc_transactions_nhsapp_covid_pass_transactions_month_count"
+				},
+				{
+					"metric": "ndc_transactions_nhsapp_research_count",
+					"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/ndc_transactions_nhsapp_research_count/",
+					"sink_file": "ndc_transactions_nhsapp_research_count.csv",
+					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_national_digital_channels/ndc_transactions_nhsapp_research_count"
 				}
 				
 			]
@@ -704,6 +715,10 @@
 			{
 				"metric": "ndc_transactions_nhsapp_covid_pass_transactions_month_count",
 				"sink_table": "ndc_transactions_nhsapp_covid_pass_transactions_month_count"
+			},
+			{
+				"metric": "ndc_transactions_nhsapp_research_count",
+				"sink_table": "ndc_transactions_nhsapp_research_count"
 			}
 		]
 	}
