Added digital social care granular notebook

--- a/config/pipelines/nhsx-au-analytics/config_dscr_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_dscr_dbrks.json
@@ -70,7 +70,14 @@
 					"sink_path": "proc/projects/nhsx_slt_analytics/digital_socialcare/dscr/dbrks_dscr_all_variables_care_home_beds/",
 					"sink_file": "dbrks_dscr_all_variables_care_home_beds.csv",
 					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_dscr/dbrks_dscr_all_variables_care_home_beds"
+				},
+				{
+					"metric": "dbrks_dscr_all_variables_collated_granular_response_count",
+					"sink_path": "proc/projects/nhsx_slt_analytics/digital_socialcare/dscr/dbrks_dscr_all_variables_collated_granular_response_count/",
+					"sink_file": "dbrks_dscr_all_variables_collated_granular_response_count.csv",
+					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_dscr/dbrks_dscr_all_variables_collated_granular_response_count"
 				}
+				
 			]
 		},
 		"staging": [	
@@ -81,6 +88,10 @@
             {
 				"metric": "dscr_all_variables_care_home_beds",
 				"sink_table": "dscr_all_variables_care_home_beds"
+			},
+			{
+				"metric": "dscr_all_variables_collated_granular_response_count",
+				"sink_table": "dscr_all_variables_collated_granular_response_count"
 			}
 		],
 		"validation": [
