Added validation config for ers

--- a/config/pipelines/direct-load/config_ers_api.json
+++ b/config/pipelines/direct-load/config_ers_api.json
@@ -55,6 +55,13 @@
             "metric": "e_rs_api_month_prop",
             "sink_table": "e_rs_api_month_prop"
         }
+    ],
+
+    "validation": [
+        {
+            "initial_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_dscr_validation/dbrks_dscr_e_rs_api_file_validation",
+            "final_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_count_rows_in_table"
+    }
     ]
     }
 }
