--- a/config/pipelines/direct-load/config_ers_api.json
+++ b/config/pipelines/direct-load/config_ers_api.json
@@ -24,12 +24,17 @@
 
         "raw": {
             "source_path": "land/sharepoint/Shared Documents/nhsx_au_ingestion/e_rs_api/",
-            "sink_file": "e_rs_api.xlsx"
+            "sink_file": "e_rs_api.csv"
         },
-
-        "project": {
+        "proc": {
 			"source_path": "land/sharepoint/Shared Documents/nhsx_au_ingestion/e_rs_api/",
-			"source_file": "e_rs_api.xlsx",
+			"source_file": "e_rs_api.csv",
+			"sink_path": "proc/sources/nhsx/sharepoint/csv/e_rs_api/full/",
+			"sink_file": "e_rs_api.csv"
+        },
+        "project": {
+			"source_path": "proc/sources/nhsx/sharepoint/csv/e_rs_api/full/",
+			"source_file": "e_rs_api.csv",
             "denominator_source_path": "proc/sources/ncdr_etp/adf_v2/table/odscodes/trust_mapping/",
             "denominator_source_file": "table_odscodes_trust_mapping.parquet",
 			"databricks_orchestrator_notebook": "/databricks/au-azure-databricks-cicd/orchestration/dbrks_e_rs_api_orchestrator",
