--- a/config/pipelines/nhsx-au-analytics/config_epr_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_epr_dbrks.json
@@ -61,7 +61,16 @@
 				"sink_table": "epr_data_biweekly_count"
 			}
            
-		]
+		],
+    
+	"validation": [
+	    {
+		"initial_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_e_rs_api_validation/dbrks_e_rs_api_file_validation",
+		"final_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_count_rows_in_table"
+	}
+	]
+	}
+    }
 	}
 }
 
