--- a/config/pipelines/reference_tables/config_ons_population_api.json
+++ b/config/pipelines/reference_tables/config_ons_population_api.json
@@ -18,7 +18,7 @@
 		"name": "trigger_ons_population_api",
     	"folder": "reference_tables/ons_population_api/",
 		"ingestion": {
-			"databricks_orchestrator_notebook": "/databricks/au-azure-databricks-cicd/orchestration/dbrks_reference_shapefile_orchestrator"
+			"databricks_notebook": "/databricks/au-azure-databricks-cicd/ingestion/dbrks_ons_population_api/dbrks_ons_population_api"
 		},
 		"raw": {
 			"source_path": "raw/factsanddim/adf_v2/table/odscodes/full/",
@@ -41,12 +41,8 @@
 				"metric": "ons_population_api",
 				"source_path": "raw/ons_geoportal/api/table/icb_population/snapshot/",
 				"source_file": "table_ons_population_api.parquet",
-				"shapefile_source_path": "raw/ons_geoportal/webscrape/shapefile/ccg_boundaries/snapshot/",
-				"shapefile_source_file": "ons_population_api.csv",
 				"sink_path": "proc/sources/ons_geoportal/api/table/icb_population/snapshot/",
-				"sink_file": "table_ons_population_api.parquet",
-				"shapefile_sink_path": "proc/sources/ons_geoportal/webscrape/shapefile/ccg_boundaries/snapshot/",
-				"shapefile_sink_file": "ons_population_api.csv"
+				"sink_file": "table_ons_population_api.parquet"
 				}
 		],
 		"project": [
