--- a/config/pipelines/nhsx-au-analytics/config_national_digital_channels_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_national_digital_channels_dbrks.json
@@ -230,6 +230,11 @@
 						"id": "M271",
 						"full_name": "% user base logging in last three months",
 						"short_name": "ndc_dashboard_user_base_loggingin_3month_prop"
+					},
+					{
+						"id": "M272",
+						"full_name": "Wayfinder",
+						"short_name": "ndc_transactions_nhsapp_wayfinder"
 					}
 				]
 			}
@@ -550,6 +555,12 @@
 					"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/ndc_report/ndc_dashboard_user_base_loggingin_3month_prop/",
 					"sink_file": "ndc_dashboard_user_base_loggingin_3month_prop.csv",
 					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_national_digital_channels/dbrks_ndc_dashboard_user_base_loggingin_3month_prop"
+				},
+				{
+					"metric": "ndc_transactions_nhsapp_wayfinder",
+					"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/ndc_transactions_nhsapp_wayfinder/",
+					"sink_file": "ndc_transactions_nhsapp_wayfinder.csv",
+					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_national_digital_channels/dbrks_ndc_transactions_nhsapp_wayfinder"
 				}
 				
 			]
@@ -734,6 +745,10 @@
 			{
 				"metric": "ndc_dashboard_user_base_loggingin_3month_prop",
 				"sink_table": "ndc_dashboard_user_base_loggingin_3month_prop"
+			},
+			{
+				"metric": "ndc_transactions_nhsapp_wayfinder",
+				"sink_table": "ndc_transactions_nhsapp_wayfinder"
 			}
 		]
 	}
