--- a/config/pipelines/nhsx-au-analytics/config_epr_total_expenditure.json
+++ b/config/pipelines/nhsx-au-analytics/config_epr_total_expenditure.json
@@ -50,14 +50,15 @@
 					    "databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_epr_total_expenditure/dbrks_epr_total_expenditure_month_count"
 				    }
 				
-		]
-	    },
+		],
     
-	    "staging": [
+	"validation": [
 	    {
-		"metric": "epr_total_expenditure_month_count",
-		"sink_table": "epr_total_expenditure_month_count"
-	    }
-			]
+		"initial_validation": "/databricks/au-azure-databricks-cicd/validation/dbrs_epr_validation/dbrks_epr_total_expenditure_validation",
+		"final_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_count_rows_in_table"
 	}
-    }
+	]
+	}
+    
+	
+}
