--- a/config/pipelines/nhsx-au-analytics/config_virtual_ward_capacity.json
+++ b/config/pipelines/nhsx-au-analytics/config_virtual_ward_capacity.json
@@ -57,6 +57,13 @@
 		"metric": "virtual_ward_biweekly_capacity_and_prop",
 		"sink_table": "virtual_ward_biweekly_capacity_and_prop"
 	    }
+			],
+    
+			"validation": [
+				{
+				"initial_validation": "/databricks/au-azure-databricks-cicd/validation/validation/dbrks_virtual_ward_capacity_validation/dbrks_virtual_ward_capacity_validation",
+				"final_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_count_rows_in_table"
+			}
 			]
 	}
     }
