--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
@@ -105,6 +105,11 @@
 						"id": "M181",
 						"full_name": "accurx - medicalJump Off Clicks",
 						"short_name": "nhs_app_jumpoff_accurx_medical_day_count"
+					},
+					{
+						"id": "M182",
+						"full_name": "Jumpoffs All",
+						"short_name": "nhs_app_jumpoff_all"
 					}
 				]
 			}
@@ -258,6 +263,12 @@
 					"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_accurx_medical_day_count/",
 					"sink_file": "nhs_app_jumpoff_accurx_medical_day_count.csv",
 					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_accurx_medical_day_count"
+				},
+				{
+					"metric": "nhs_app_jumpoff_all_dynamic",
+					"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_all_dynamic/",
+					"sink_file": "nhs_app_jumpoff_all_dynamic.csv",
+					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_all_dynamic"
 				}
 			]
 		},
@@ -341,6 +352,10 @@
 			{
 				"metric": "nhs_app_jumpoff_accurx_medical_day_count",
 				"sink_table": "nhs_app_jumpoff_accurx_medical_day_count"
+			},
+			{
+				"metric": "nhs_app_jumpoff_all_dynamic",
+				"sink_table": "nhs_app_jumpoff_all_dynamic"
 			}
 		],
 		"validation": [
